# spam-filter-bayes

./: CMakeLists.txt  README.md
include/: mainfuncs.h  naive_bayes.h  str_transform.h
src/: mainfuncs.cpp  naive_bayes.cpp  spam_filter.cpp  str_transform.cpp
tests/: CMakeLists.txt  tests.cpp
